--- a/Diploma_AQA_18_onl/src/test/resources/config.properties
+++ b/Diploma_AQA_18_onl/src/test/resources/config.properties
@@ -1,6 +1,6 @@
-url=https://demoqa.com/
+url=https://www.toolsqa.com/selenium-training/
 browser=chrome
 headless=false
 #username=nSolovev
 #password=test!N_01
-timeout=10
+timeout=50
