--- a/Diploma_AQA_18_onl/src/test/resources/config.properties
+++ b/Diploma_AQA_18_onl/src/test/resources/config.properties
@@ -1,6 +1,6 @@
-url=https://www.toolsqa.com/selenium-training/
-browser=chrome
-headless=false
-#username=nSolovev
-#password=test!N_01
-timeout=50
+urlUI=https://demoqa.com/
+browserUI=chrome
+firstNameUI=Andy
+lastNameUI=Harrison
+userNameUI=Rock
+passwordUI=111GFf6452@
