--- a/Diploma_AQA_18_onl/.gitignore
+++ b/Diploma_AQA_18_onl/.gitignore
@@ -1,6 +1,6 @@
 target/
-!**/src/main/**/target/
-!**/src/test/**/target/
+!/src/main//target/
+!/src/test//target/
 
 ### IntelliJ IDEA ###
 .idea/*
