--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,8 +1,7 @@
-urlUI=https://demoqa.com/
-url=https://demoqa.com
-browserUI=chrome
-firstNameUI=Andy
-lastNameUI=Harrison
-userNameUI=Rock
-passwordUI=111GFf6452@
+url=https://demoqa.com/
+browser=chrome
+firstName=Andy
+lastName=Harrison
+userName=Rock
+password=111GFf6452@
 
